--- a/index.html
+++ b/index.html
@@ -383,16 +383,16 @@
             </form>
 
             <div class="social">
-               <a href="">
+               <a href="#">
                   <img src="img/vk.svg" alt="">
                </a>
-               <a href="">
+               <a href="#">
                   <img src="img/youtube.svg" alt="">
                </a>
-               <a href="">
+               <a href="#">
                   <img src="img/facebook.svg" alt="">
                </a>
-               <a href="">
+               <a href="#">
                   <img src="img/instagram.svg" alt="">
                </a>
             </div>
